--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fabric-ca-client": "^1.2.0",
     "fabric-client": "^1.2.0"
   },
-  "contributors": ["Horea Porutiu", "ljbennett62", "Christopher Hiller"],
+  "contributors": ["Horea Porutiu", "ljbennett62", "Christopher Hiller", "Fady Ibrahim"],
   "license": "Apache-2.0",
   "keywords": [
     "Hyperledger",
